# campus-rag

./: .gitignore  DEV.md  Dockerfile  README.md  count_lines.sh  docker.sh  pyproject.toml  requirements.txt
data/: example.json  keywords.json  keywords_for_schedule.json
milvus-standalone/: docker-compose.yml
rag-docker/: docker-compose.yml
src/CampusRAG/: milvus_init.py
src/campus_rag/: main.py
src/campus_rag/api/: main.py
src/campus_rag/api/routes/: conversation.py  course_scheduler.py  knowledge_base.py  rag.py  user.py
src/campus_rag/chunk/: course.py  course_crawler.py  course_type.py  forRedAndBlack.py  forStudentManual.py  merge_red_black_and_courses.py  milvus_init.py  organization.py  red_and_black.py  se_teacher.py  software_news.py  student_manual.py
src/campus_rag/constants/: conversation.py  course.py  log.py  milvus.py  passwd.py  prompt.py  redis.py  sqlite.py
src/campus_rag/conversation/: __init__.py  inmemory_conversation.py
src/campus_rag/data-pipeline/: course_crawler.py  se_teacher.py
src/campus_rag/data_pipeline/: alloc_id.py  course_crawler.py  course_type.py  merge_red_black_and_courses.py  red_and_black.py  se_teacher.py  software_news.py
src/campus_rag/domain/course/: po.py  vo.py
src/campus_rag/domain/knowledge/: po.py
src/campus_rag/domain/rag/: po.py  vo.py
src/campus_rag/domain/user/: po.py  vo.py
src/campus_rag/impl/: conversation.py  course_scheduler.py
src/campus_rag/impl/course_scheduler/: filter.py  schedule.py  show_info.py
src/campus_rag/impl/knowledge_base/: selector.py  writer.py
src/campus_rag/impl/rag/: chat_pipeline.py  conv_pipeline.py  generate.py  hybrid_retrieve.py  pipeline_entry.py
src/campus_rag/impl/user/: conversation.py  user.py
src/campus_rag/infra/: embedding.py  redis.py  reranker.py
src/campus_rag/infra/milvus/: course_ops.py  hybrid_retrieve.py  init.py
src/campus_rag/infra/sqlite/: conversation.py  (+1 more)
src/campus_rag/rag/: enhance_query.py  generate.py  hybrid_retrieve.py  pipeline.py  reflect.py  rerank.py
src/campus_rag/utils/: chunk_ops.py  const.py  keyword_explain.py  llm.py  logging_config.py  milvus_ops.py  passwd.py  sse_util.py
test/data/: test_course.py
test/impl/: test_chatpipe.py  test_conversation.py  test_convstream.py  test_course_scheduler.py  test_disp.py  test_filter.py  test_route.py  test_scheduler.py
test/infra/: test_hybrid.py
test/rag/: test_retrieval.py  test_spec.py
test/util/: test_keyword.py
(+4 files in other folders)
