[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
include-package-data = false

[project]
name = "campus_rag"
version = "0.1"
description = "Campus information RAG in NJU"
requires-python = "==3.10.*"
dependencies = [
  "typer",
  "tqdm",
  "protobuf",
  "grpcio-tools",
  "pymilvus",
  "sentence_transformers",
  "milvus-model",
  "openai",
  "langchain",
  "langchain-openai",
  "FlagEmbedding>=1.3.3",
  "fastapi[standard]",
  "uvicorn>=0.34.2",
  "redis>=6.0.0",
]
