[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"


[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "-v"
log_cli = true
log_cli_level = "INFO"

[project]
name = "campus_rag"
version = "0.1"
description = "Campus information RAG in NJU"
requires-python = "==3.10.*"
dependencies = [
  "typer",
  "tqdm",
  "protobuf",
  "grpcio-tools",
  "pymilvus",
  "sentence_transformers",
  "milvus-model",
  "openai",
  "langchain",
  "langchain-openai",
  "FlagEmbedding>=1.3.3",
  "fastapi[standard]",
  "uvicorn>=0.34.2",
  "redis>=6.0.0",
  "ruff>=0.11.9",
  "sqlmodel>=0.0.24",
  "aiosqlite>=0.21.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=1.0.0",
  "pytest-mock>=3.14.1",
  "passlib[bcrypt]>=1.7.4",
  "jose>=1.0.0",
  "python-jose>=3.5.0",
]
